Change shop page layout and fix spacing in product card

--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -35,19 +35,25 @@
     }
   }
 
-  &-name {
-    display: block;
-    text-transform: uppercase;
-    font-size: 1.8rem;
-    margin: 5px 0;
-    font-family: $main-font;
-  }
+  &-desc {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px 10px;
+    text-align: center;
 
-  &-price {
-    font-family: $main-font;
-    color: $blue;
-    font-size: 1.6rem;
-    font-weight: 600;
+    &-name {
+      text-transform: uppercase;
+      font-size: 1.8rem;
+      font-family: $main-font;
+    }
+  
+    &-price {
+      font-family: $main-font;
+      color: $blue;
+      font-size: 1.8rem;
+      font-weight: 600;
+    }
   }
 }
 
