--- a/src/views/Shop/Filters/Filters.scss
+++ b/src/views/Shop/Filters/Filters.scss
@@ -17,7 +17,6 @@
 .categories-filter {
   position: sticky;
   top: 140px;
-  border: 1px solid #ddd;
   padding: 10px;
 
   @media (max-width: $lg) {
