--- a/src/views/Shop/ProductsGrid/ProductsGrid.scss
+++ b/src/views/Shop/ProductsGrid/ProductsGrid.scss
@@ -2,9 +2,9 @@
 
 .listing-products-grid {
   display: grid;
-  gap: 15px;
+  gap: 30px;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: auto;
   list-style-type: none;
 
   @media (max-width: $lg) {
@@ -15,8 +15,13 @@
   }
 
   &-item {
-    text-align: center;
-    border: 1px solid #ddd;
+    transition: all ease .3s;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
+
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+    }
   }
 }
 .product {
@@ -28,6 +33,7 @@
   }
   &-filters {
     position: relative;
+    border-right: 1px solid #ddd;
   }
   &-title {
     font-size: 16px;
