--- a/src/views/Shop/Shop.scss
+++ b/src/views/Shop/Shop.scss
@@ -1,14 +1,15 @@
 @use "../../styles/index.scss" as *;
 
 .product-list {
-  display: flex;
-  max-width: 80%;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-auto-rows: auto;
   margin: 0 auto;
-  gap: 20px;
+  gap: 30px;
   padding: 15px 20px;
 
   @media (max-width: $lg) {
-    flex-direction: column;
+    grid-template-columns: 1fr;
     max-width: 100%;
   }
 }
